Tue Apr  3 16:10:10 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:

          Fixed a couple of filtering issues:

          1) If exist was used in the form of "exist $.filterable_data(ident)",
             memory would be leaked in the form of a CORBA::string_dup().
          2) If exist was used in the form of "exist ident", it would never
             match anything.  It now defaults to the looking at the
             filterable data identifiers.

          This fixes bug 1263.

        * orbsvcs/tests/Notify/Structured_Filter/Structured_Consumer.cpp:

          Modified this test to use both forms of exist in the filter.

        * orbsvcs/tests/Notify/Structured_Filter/notify.conf.xml:

          Converted notify.conf to XML for use with the XML service
          configurator.

Tue Apr  3 13:05:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2734_Regression/README:
        * tests/Bug_2734_Regression/run_test.pl:

          Added a regression test for Bug 2734 based on the Timeout test.

Tue Apr  3 12:37:37 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Makefile.am:

          Added Bug_2677_Regression and Bug_2735_Regression to the list of
          sub-directories.

Tue Apr  3 12:09:43 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tao/GIOP_Message_Version.h:
        * tao/GIOP_Message_Version.inl:

          Changed the equality and inequality operators to const (as they
          should have originally been).

Tue Apr  3 11:56:17 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2677_Regression/DllORB.cpp:

          Removed the call to POAManager::deativate(), it wasn't necessary
          and caused problems for minimum CORBA and CORBA e compact.

Mon Apr  2 18:14:07 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/ImplRepo/airplane_client_i.cpp: